--- a/assets/scss/components/_video.scss
+++ b/assets/scss/components/_video.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/colors';
+@use '../abstracts/mixins';
 
 .video-wrapper {
     position: relative;
@@ -38,13 +39,13 @@
     }
 }
 // Media for video
-@media (max-width: 840px){
-    .video-wrapper {
+@include mixins.mob {
+        .video-wrapper {
         img {
             margin-top: 5em;
         }
         .play-circle {
-            margin-top: 3em;
+            margin-top: 4em;
         }
     }
 }
